Add documentation to parameter variation files

--- a/test_configs.ipynb
+++ b/test_configs.ipynb
@@ -1,6 +1,138 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overview\n",
+    "This file is used to parse the user-defined `.json` delta files. They specify which parameters and how the parameters in GPU config files should be varied. There are some conversion functions between JSON and the GPU config files in the Library section for ease of usage.\n",
+    "# Table of contents\n",
+    "- [How to use](#how-to-use)\n",
+    "    - [Rules](#rules)\n",
+    "- [Library section](#library-section)\n",
+    "- [Test section](#test-section)\n",
+    "    - [Test 2](#test-2)\n",
+    "    - [Test 1](#test-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to use\n",
+    "1. Use the `config_to_dict()` function to convert a specific GPU config file to JSON format (example name `gpgpu.json`)\n",
+    "2. Create JSON file of deltas (example name `deltas.json`) based on `gpgpu.json`, using the rules below\n",
+    "3. Use `parse_deltas()` to parse these deltas\n",
+    "4. Use `apply_parsed_deltas()` to expand these deltas to simulatable config files\n",
+    "\n",
+    "Refer to [Test section](#test-section) to see examples of these steps. Example of these files (except for the expanded deltas) can be found in [./util/tuner/RTX2080_S](./util/tuner/RTX2080_S/).\n",
+    "\n",
+    "5. Use the different `test_*.sh` files to simulate all the configs: `test_run.sh` -> `test_status.sh` (optional) -> `test_results.sh` (important: need to run the tests on hardware and have the results already in ./hw_run)\n",
+    "6. Use [test_analysis.ipynb](./test_analysis.ipynb) to aggregate the results and plot\n",
+    "\n",
+    "## Rules\n",
+    "The `deltas.json` file specifies what parameters you want to vary. If the following characters `':'`, `'*'`, `'='`, `'|'` exist within the value string of a parameter, they signal to the `parse_deltas()` function to create deltas for that parameter. Currently, it is only possible to vary numeric values.\n",
+    "\n",
+    "For example, the following config in the GPU config file:\n",
+    "```\n",
+    "-gpgpu_cache:dl1 S:4:128:64,L:T:m:L:L,A:256:32,16:0,32\n",
+    "```\n",
+    "\n",
+    "expands to, in the `gpgpu.json` file:\n",
+    "\n",
+    "```\n",
+    "    \"gpgpu_cache:dl1\": [\n",
+    "        [\n",
+    "            \"S\",\n",
+    "            4,\n",
+    "            128,\n",
+    "            64\n",
+    "        ],\n",
+    "        [\n",
+    "            \"L\",\n",
+    "            \"T\",\n",
+    "            \"m\",\n",
+    "            \"L\",\n",
+    "            \"L\"\n",
+    "        ],\n",
+    "        [\n",
+    "            \"A\",\n",
+    "            256,\n",
+    "            32\n",
+    "        ],\n",
+    "        [\n",
+    "            16,\n",
+    "            0\n",
+    "        ],\n",
+    "        [\n",
+    "            32\n",
+    "        ]\n",
+    "    ],\n",
+    "```\n",
+    "\n",
+    "We shall focus on varying parameters in the first part, which corresponds to `<sector?>:<nsets>:<bsize>:<assoc>` of L1:\n",
+    "```\n",
+    "        [\n",
+    "            \"S\",\n",
+    "            4,\n",
+    "            128,\n",
+    "            64\n",
+    "        ],\n",
+    "```\n",
+    "\n",
+    "The `deltas.json` file is a direct copy of `gpgpu.json` file but with certain changes to specify variation. The characters `':'`, `'*'`, `'='`, `'|'` are used as follows:\n",
+    "\n",
+    "- `':'`: Create an arithmetic sequence of `<start>:<step>:<end>`. For example, to change `<nsets>` from 1 to 4 with step size 1 we can use the following (note that 3 is not a power of 2):\n",
+    "```\n",
+    "        [\n",
+    "            \"S\",\n",
+    "            \"1:1:4\",\n",
+    "            128,\n",
+    "            64\n",
+    "        ],\n",
+    "```\n",
+    "\n",
+    "- `'*'`: Create a geometric sequence of `<start>:<multiplier>:<end>`. For example, to change `<nsets>` from 1 to 128 with multiplier 2 we can use the following:\n",
+    "```\n",
+    "        [\n",
+    "            \"S\",\n",
+    "            \"1*2*128\",\n",
+    "            128,\n",
+    "            64\n",
+    "        ],\n",
+    "```\n",
+    "\n",
+    "- `'='`: Used with `':'` to keep all values with the `'='` sign varying in the same arithmetic sequence. Limited usefulness, I used only for changing multiple clock frequencies the same way. For example, to change `<nsets>` and `<bsize>` simultaneously from 1 to 4 with step size 1:\n",
+    "```\n",
+    "        [\n",
+    "            \"S\",\n",
+    "            \"=1:1:4\",\n",
+    "            \"=\",\n",
+    "            64\n",
+    "        ],\n",
+    "```\n",
+    "\n",
+    "- `'|'`: Used with `'*'` to vary multiple parameters geometrically while keeping the total product the same. Useful to keep the same total cache size while varying different parameters. For example, to vary `<nsets>` between 1 and 16, `<bsize>` between 32 and 256, and `<assoc>` automatically so that the total cache size is constant 32768 bytes:\n",
+    "```\n",
+    "        [\n",
+    "            \"S\",\n",
+    "            \"|32768|1*2*16\",\n",
+    "            \"|32*2*256\",\n",
+    "            \"|\"\n",
+    "        ],\n",
+    "```\n",
+    "\n",
+    "Note that in sectored cache (S) the `<bsize>` must always be 128 bytes, so some simulations will not be run."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Library section"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -10,7 +142,7 @@
     "import re\n",
     "import json\n",
     "\n",
-    "# Function to convert numeric strings to numbers\n",
+    "# Convert numeric strings to numbers\n",
     "def convert_numbers(data):\n",
     "    if isinstance(data, dict):\n",
     "        return {k: convert_numbers(v) for k, v in data.items()}\n",
@@ -25,6 +157,7 @@
     "            return data\n",
     "    return data\n",
     "\n",
+    "# Convert configs to dicts (used as JSON files)\n",
     "def config_to_dict(cfg_path: str, cfg_file: str):\n",
     "    with open(os.path.join(cfg_path, cfg_file)) as f:\n",
     "        data = f.read().split(\"\\n\")\n",
@@ -39,6 +172,7 @@
     "\n",
     "    return convert_numbers(configs)\n",
     "\n",
+    "# Convert dicts (JSON files) to configs\n",
     "def dict_to_config(configs: dict, cfg_path: str, cfg_file: str):\n",
     "    data = []\n",
     "    for config_name in configs.keys():\n",
@@ -67,22 +201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total: 273 configs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import itertools\n",
     "import numpy as np\n",
     "import copy\n",
     "\n",
+    "# Parse arithmetic/geometric variation (:, *)\n",
     "def parse_range(string):\n",
     "    if ':' in string:\n",
     "        start, step, end = map(int, string.split(':'))\n",
@@ -96,6 +223,7 @@
     "        return values\n",
     "    return []\n",
     "\n",
+    "# Parse structure (=, |)\n",
     "def parse_structure(lst: list[str]):\n",
     "    values = []\n",
     "    if len(lst) > 0:\n",
@@ -124,6 +252,7 @@
     "    \n",
     "    return values\n",
     "\n",
+    "# Convert user-defined delta dict/JSON to parsed delta dict/JSON\n",
     "def parse_deltas(deltas: dict):\n",
     "    count = 0\n",
     "    p_deltas = {}\n",
@@ -162,6 +291,8 @@
     "    print(f\"Total: {count} configs\")\n",
     "    return p_deltas\n",
     "\n",
+    "# Expand parsed delta dict/JSON to many config files\n",
+    "# They are indexed (ID) sequentially from 0\n",
     "def apply_parsed_deltas(configs: dict, p_deltas: dict, cfg_dlt_path: str):\n",
     "    index = 0\n",
     "    for config_name in p_deltas.keys():\n",
@@ -174,9 +305,21 @@
     "                dict_to_config(configs, cfg_dlt_path, f\"{str(index).zfill(4)}.config\")\n",
     "                index += 1\n",
     "                \n",
-    "            configs[config_name][i] = original_vals\n",
-    "            \n",
-    "            \n"
+    "            configs[config_name][i] = original_vals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test section"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test 1"
    ]
   },
   {
@@ -193,19 +336,38 @@
     }
    ],
    "source": [
+    "# Path to config file (gpgpu.config)\n",
     "cfg_path = \"util/tuner/RTX2080_S\"\n",
     "cfg_file = \"gpgpusim.config\"\n",
+    "\n",
+    "# Path to JSON file\n",
     "jsn_file = \"gpgpusim.json\"\n",
     "configs = config_to_dict(cfg_path, cfg_file)\n",
+    "with open(os.path.join(cfg_path, jsn_file), 'w') as f:\n",
+    "    json.dump(configs, f, indent=4)\n",
     "\n",
+    "# ! Copy gpgpusim.json to deltas.json file and specify parameter variations\n",
+    "\n",
+    "# Deltas file\n",
     "dlt_file = \"deltas.json\"\n",
     "with open(os.path.join(cfg_path, dlt_file),) as f:\n",
     "    deltas = json.load(f)\n",
     "p_deltas = parse_deltas(deltas)\n",
+    "\n",
+    "# Save parsed deltas (not neccessary)\n",
     "p_dlt_file = \"parsed_deltas.json\"\n",
     "with open(os.path.join(cfg_path, p_dlt_file), 'w') as f:\n",
     "    json.dump(p_deltas, f, indent=4)\n",
+    "\n",
+    "# Create folder (<cfg_path>/dlt) of generated config files, sequentially indexed\n",
     "apply_parsed_deltas(configs, p_deltas, os.path.join(cfg_path, \"dlt\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test 2"
    ]
   },
   {
@@ -222,16 +384,12 @@
     }
    ],
    "source": [
-    "# cfg_path = \"gpu-simulator/gpgpu-sim/configs/tested-cfgs/RTX2080_S\"\n",
     "cfg_path = \"util/tuner/RTX2080_S\"\n",
     "cfg_file = \"gpgpusim.config\"\n",
     "jsn_file = \"gpgpusim.json\"\n",
     "configs = config_to_dict(cfg_path, cfg_file)\n",
     "with open(os.path.join(cfg_path, jsn_file), 'w') as f:\n",
     "    json.dump(configs, f, indent=4)\n",
-    "# print(json.dumps(configs, indent=4))\n",
-    "# data = dict_to_config(configs, cfg_path, \"out.\" + cfg_file)\n",
-    "# print(data)\n",
     "\n",
     "dlt_file = \"deltas_cuDGT_test2.json\"\n",
     "with open(os.path.join(cfg_path, dlt_file),) as f:\n",
